# model-manager

./: .gitignore  AGENTS.md  Dockerfile.api  Justfile  README.md  config.yaml  docker-compose.api.yml  models.yaml  pyproject.toml
backends/llama/: docker-compose.yml
backends/nemotron-parse/: Dockerfile  app.py  docker-compose.yml  hf_logits_processor.py  postprocessing.py  pyproject.toml
backends/ollama/: docker-compose.yml  id_ed25519.pub
backends/sam3/: Dockerfile  docker-compose.yml
backends/vllm/: Dockerfile  Dockerfile.nemotron  docker-compose.yml  entrypoint.sh  nemotron_chat_template.jinja  nemotron_parse_vllm_logitprocs.py  patch-vllm.sh  vllm-ctl
backends/vllm/env/: README.md
backends/vllm/env/profiles/: glm-ocr.env
benchmarks/: README.md  sources.yaml
benchmarks/ocr-suite/: inference.py  runner.py
benchmarks/ocr-suite/benchmarks/: kie.py  ocrbench.py  tables.py
benchmarks/ocr_suite/: inference.py  runner.py  setup_datasets.py
benchmarks/ocr_suite/benchmarks/: kie.py  ocrbench.py  omnidocbench.py  tables.py  unimer.py
benchmarks/ocrbench/: BENCHMARK_NOTES.md  eval_gemini.py  eval_mistral_ocr.py  eval_mistral_vqa.py  eval_openai.py
benchmarks/results/ocr-load/: README.md  glm_ocr_budget_12288_short.csv  glm_ocr_budget_12288_short.json  glm_ocr_budget_16384_short.csv  glm_ocr_budget_16384_short.json  glm_ocr_budget_4096.csv  glm_ocr_budget_4096.json  glm_ocr_budget_8192_breakpoint_timeout90.csv  glm_ocr_budget_8192_breakpoint_timeout90.json  glm_ocr_budget_8192_compact.csv  glm_ocr_budget_8192_compact.json
benchmarks/scripts/: bench_ollama.py  benchmark_matrix.py  context-quality-profile.py  eval-all-ollama.py  profile-all-ollama.py  quality_bench.py  test_ollama_context.py
benchmarks/swebench/: local_ollama.yaml
docs/: README.md  api.md  deepseek-ocr2-vllm.md  sam3.md  vllm-multi-image.md
docs/archive/: MODELS_TO_TEST.md  OPTIMIZATION_LOG.md  SPEC.md  TEST_PLAN.md
docs/archive/external-local/: README.md
docs/archive/external-local/livebench/: RESULTS.md  run_benchmark.sh
docs/archive/external-local/multimodal-ocr/: run_benchmarks.sh
docs/plans/: 2026-02-22-ocr-benchmark-suite-design.md  2026-02-22-ocr-benchmark-suite-plan.md
scripts/: bench.py  benchmark.py  benchmark_matrix.py  context-quality-profile.py  eval-all-ollama.py  ocr_concurrency_sweep.py  profile-all-ollama.py  quality_bench.py
services/sam3/: app.py  pyproject.toml
src/model_manager/: __init__.py  benchmark.py  benchmark_hub.py  cli.py  config.py  containers.py  modes.py  ollama.py  state.py
src/model_manager/api/: __init__.py  server.py
tests/: smoke_test.py  test_api.py  test_benchmark_hub.py  test_integration.py  test_modes_vllm.py
tui/: build.ts  package.json
tui/src/: app.tsx  index.test.tsx  index.tsx
tui/src/lib/: mm.ts  timing.ts
(+4 files in other folders)
