[project]
name = "model-manager"
version = "0.2.0"
description = "Zero config local LLM infrastructure. Download a model, it works."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pyyaml>=6.0",
    "httpx>=0.28.0",
    "pydantic>=2.0.0",
]

[project.scripts]
mm = "model_manager.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
    "ty>=0.0.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/model_manager"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F"]
extend-select = [
    "W",   # PyCodeStyle warnings
    "I",   # Sort imports properly
    "UP",  # Upgrade syntax for supported Python versions
    "C4",  # Comprehension correctness and simplification
    "FA",  # Enforce `from __future__ import annotations`
    "ISC", # Implicit string concatenation checks
    "ICN", # Import naming conventions
    "RET", # Return statement consistency
    "SIM", # Code simplifications
    "TID", # Import tidiness
    "TC",  # TYPE_CHECKING import hygiene
    "PTH", # pathlib preference over os.path
    "TD",  # TODO hygiene
    "NPY", # NumPy-specific correctness checks
    "B",   # flake8-bugbear
    "RUF", # Ruff-specific rules
]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python-version = "3.11"
